...
  ];

  late final List<String> _titleOptions = <String>[
    'Welcome, ' + widget.username.split(' ')[0] + '!',
    'Equipments',
    'Employees',
    'Projects',
    'Generate Reports',
  ];

  @override
  Widget build(BuildContext context) {
    switch (widget.accessLevel) {
...
                  fit: BoxFit.contain,
                  width: 38,
                ),
                label: "Equipments",
                icon: Image.asset(
                  "images/equipment.png",
                  key: const Key('app-equipment-nav'),
                  fit: BoxFit.contain,
                  width: 38,
                ),
              ),
              BottomNavigationBarItem(
                activeIcon: Image.asset(
...
                  fit: BoxFit.contain,
                  width: 34,
                ),
                label: "Projects",
                icon: Image.asset(
                  "images/Project_IMG.png",
                  key: const Key('app-projects-nav'),
                  fit: BoxFit.contain,
                  width: 34,
                ),
              ),
              BottomNavigationBarItem(
                activeIcon: Image.asset(
...
