...
      if (userInfo.entries.first.value.endDate != null) {
        return [
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 10),
            child: historyButton(
              context,
              title: 'Assign Equipment',
              equipmentId: equipamentInfo.equipmentInfo.id!,
            ),
          ),
          const SizedBox(
            height: 10,
          ),
...
              child: historyButton(
                context,
                title: usersHistory == null ||
                        usersHistory!.isEmpty ||
                        usersHistory!.first.endDate != null
                    ? 'Assign Equipment'
                    : 'Close Assignment',
                equipmentId: equipamentInfo.equipmentInfo.id!,
                idAssign: usersHistory == null || usersHistory!.isEmpty
                    ? null
                    : usersHistory?.first.idAssign,
              ),
            ),
...
              labelColor: Colors.black,
              unselectedLabelColor: Colors.grey[700],
              indicatorColor: const Color(0xFF6CCFF7),
              indicatorPadding: const EdgeInsets.symmetric(horizontal: 40.0),
              tabs: const [
                Tab(text: 'Detail'),
                Tab(key: Key('history-equipment'), text: 'History'),
              ],
            ),
            Expanded(
              child: TabBarView(
                children: [
                  HistoryEquipmentDataApp(
...
